<resources>
	<string name="app_name">Complete Linux Installer</string>
	<string name="title_about">About</string>
	<string name="button_back">Back</string>
	<string name="download_VNC">Download/Install VNCViewer App</string>
	<string name="download_Term">Download/Install Terminal App</string>
	<string name="download_sourceforge">Download from sourceforge</string>
	<string name="download_Torrent">Download torrent file</string>
    <string name="install_page1">Before we start you MUST have Root and a kernel that supports loop devices. This works best on lighter roms that give you more free memory to run Linux smoothly.\n\nAlso make sure that you have debugging mode enabled Go to Settings->Applications->Development and make sure USB Debugging is checked ON.\n\nYou will also need free space on your sdcard to fit the image file.\n\nIf you have all of this please select the next tab, otherwise you will not be able to install Linux on your device</string>
	<string name="install_apps_text">Now while this is downloading, download and install the terminal app and vncviewer app if you have not already</string>
	<string name="after_install_text">Once you have downloaded the Linux package and installed both apps go to the next tab</string>
	<string name="frontpage_btn_InstallGuides">Install Guides</string>
	<string name="frontpage_btn_Tips">Tips</string>
	<string name="frontpage_btn_FAQ">FAQ</string>
	<string name="frontpage_btn_Changelog">Change Logs</string>
	<string name="frontpage_btn_Launch">Launch</string>
	<string name="frontpage_btn_news">News feed</string>
	<string name="frontpage_btn_about">About</string>
	<string name="installGuide_Menu_Intro">These are the Linux distros that support your device.</string>
	<string name="installGuide_Menu_Ubuntu13">Ubuntu 13.04</string>
	<string name="installGuide_Menu_Ubuntu1310">Ubuntu 13.10</string>
	<string name="installGuide_Menu_Debian">Debian</string>
	<string name="installGuide_Menu_Debian_Testing">Debian Testing</string>
	<string name="installGuide_Menu_ArchLinux">ArchLinux</string>
	<string name="installGuide_Menu_Fedora">Fedora 19</string>
	<string name="installGuide_Menu_Kali">Kali Linux</string>
	<string name="installGuide_Menu_openSUSE">openSUSE 12.3</string>
	<string name="comings_soon_text">This Distros will be coming soon!\n\nThose with donation keys will get test versions first (they will be unlocked to the free app once stable)</string>
	<string name="debian_guide">Install Debian</string>
	<string name="debian_guide_testing">Install Debian Testing</string>
	<string name="archlinux_guide">Install Archlinux</string>
	<string name="ubuntu13_guide">Install Ubuntu 13.04</string>
	<string name="ubuntu1310_guide">Install Ubuntu 13.10</string>
	<string name="fedora_guide">Install Fedora</string>
	<string name="kali_guide">Install Kali</string>
	<string name="download_menu_button">Download Image</string>
	<string name="download_Large">Download Large Image</string>
	<string name="download_Small">Download Small Image</string>
	<string name="download_Core">Download Core Image</string>
	<string name="ubuntu10_install_page2">Lets start by downloading the Ubuntu image file. There are two images large, small and core.</string>
	<string name="ubuntu_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called ubuntu on the root of your sdcard (there should be two files ubuntu.img and ubuntu.img.md5)\n\nYou are now ready to boot Ubuntu, do this by either using the Launch menu item or place the boot widget on you home screen and click it.\n\nYou can set settings like screen size in the Launch menu (if you have a donation key), Please note if your image is not in /sdcard/ubuntu/ubuntu.img you will need to change the location in the launcher (press the settings button then press edit).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Ubuntu is running please go to the next tab.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="ubuntu_install_page4">The terminal will now act like a Ubuntu command line, to connect to the GUI run the VNC viewer app we have downloaded.\nSet your IP address to localhost and port number 5900 and enter the password ubuntu, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Ubuntu you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="ubuntu13_image_description">The large image is 1.5GB to download and 3.5GB once extracted, it includes a wide range of programs from python to open office. There is around 1.5GB of free space for your own programs.\n\nThe small images is 500MB to download and 2.5GB once extracted, it includes only the basic apps required like a web browser and Java. There is around 1.5GB of free space for your own programs.</string>
	<string name="ubuntu12_install_page2">Lets start by downloading the Ubuntu image file. There are three images full, small and core. Click in the download button for info on each image</string>
	<string name="ubuntu12_image_description">The Core image is 150MB to download and 1GiB once extracted, it includes the basic setup needed to run Ubuntu and the OpenBox window manager. This makes a create base to build you own images from\n\nThe Small image is 150MB to download and 2GiB once extracted, it includes the LXDE desktop and suite of programs.\n\nThe Large image is 900MB to download and 4GB once extracted; includes the KDE Plasma Desktop, LibreOffice, and Gimp.</string>
	<string name="debian_install_page2">Lets start by downloading a Debian image file.</string>
	<string name="debian_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called debian on the root of your sdcard (there should be two files debian.img and debian.img.md5)\n\nYou are now ready to boot Debian, do this by either using the launch menu item or place the boot widget on your home screen and click it.\n\nYou can set settings like screen size in the Launch menu (if you have a donation key), Please note if your image is not in /sdcard/debian/debian.img you will need to change the location in the launcher (press the settings button then press edit).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Debian is running please go to the next tab.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="debian_install_page4">The terminal will now act like a Debian command line, to connect to the GUI run the VNC viewer app we have downloaded.\n Set your IP address to localhost and port number 5900 and enter the password debian, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Debian you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="debian_image_description">There are three images you can chose from, Core, Small and Large.\n\nThe Core image is about 200MB to download and 750MB once extracted, it only includes a basic debian install with no GUI.\n\nThe Small image is about 600MB to download and 2GB once extracted, this included the XFCE GUI and basic programs.\n\nThe Large image is about 1GB to download and 3.5GB once extracted, this includes the XFCE GUI and a wide range of programs including open office</string>
	<string name="debian_testing_image_description">There are three images you can chose from, Core, Small and Large.\n\nThe Core image is 1GFB extracted; includes a basic debian install with the OpenBox Window Manager.\n\nThe Small image is 2GB extracted; includes the LXDE desktop and suite of programs.\n\nThe Large image is 4GB extracted; includes the KDE Plasma Desktop and LibreOffice.</string>
	<string name="beta_text">This distro is currently in BETA testing\n\nTo get beta access please buy a donation key\n\nOnce the distro is stable it will be made available to all</string>
	<string name="arch_install_page2">Lets start by downloading a Archlinux image file.</string>
	<string name="arch_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called archlinux on the root of your sdcard (there should be two files archlinux.img and archlinux.img.md5)\n\nYou are now ready to boot Archlinux, do this by either using the launch menu item or place the boot widget on your home screen and click it.\n\nYou can set settings like screen size in the Launch menu (if you have a donation key), Please note if your image is not in /sdcard/archlinux/archlinux.img you will need to change the location in the launcher (press the settings button then press edit).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Archlinux is running please go to the next tab.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="arch_install_page4">The terminal will now act like a Archlinux command line, to connect to the GUI run the VNC viewer app we have downloaded.\n Set your IP address to localhost and port number 5900 and enter the password backtrac, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Archlinux you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="arch_image_description">There are three images you can chose from, Core, Small and Large.\n\nThe Core image is about 300MB to download and 1GB once extracted, it includes a basic ArchLinux install with the OpenBox window manager.\n\nThe Small image is about 300MB to download and 2GB once extracted; includes the LXDE desktop and suite of programs.\n\nThe Large image is about 1.6GB to download and 4GB once extracted; includes the KDE Plasma Desktop, LibreOffice, and GIMP.</string>
	<string name="fedora_install_page2">Lets start by downloading a Fedora image file.</string>
	<string name="fedora_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called fedora on the root of your sdcard (there should be two files fedora.img and fedora.img.md5)\n\nYou are now ready to boot Fedora, do this by either using the launch menu item or place the boot widget on your home screen and click it.\n\nYou can set settings like screen size in the Launch menu (if you have a donation key), Please note if your image is not in /sdcard/fedora/fedora.img you will need to change the location in the launcher (press the settings button then press edit).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Fedora is running please go to the next tab.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="fedora_install_page4">The terminal will now act like a Fedora command line, to connect to the GUI run the VNC viewer app we have downloaded.\n Set your IP address to localhost and port number 5900 and enter the password fedora, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Fedora you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="kali_install_page2">Lets start by downloading the Kali image file.\nThis is currently in BETA and has a number of issues which we are working on!</string>
</resources>